--- a/static/settings.html
+++ b/static/settings.html
@@ -218,25 +218,6 @@
           </div>
         </div>
         <div class="settings-card">
-          <h3>Customization</h3>
-          <p>
-            Change the theme, create your own custom theme, or just change the
-            background image.
-          </p>
-          <p>
-            Custom Themes are currently broken, we are working to fix this as
-            soon as possible
-          </p>
-          <button
-            class="key-button"
-            value="Save"
-            onclick="Popup()"
-            style="width: 100%"
-          >
-            Create Custom Theme
-          </button>
-        </div>
-        <div class="settings-card">
           <h3>Search Engine</h3>
           <p>Change the search engine when searching.</p>
           <select title="engine" id="engine" onchange="EngineChange(this)">
@@ -283,44 +264,10 @@
           </label>
         </div>
         <div class="settings-card">
-          <h3>Themes!</h3>
-          <p>Pick from a variety of themes to customize your experience.</p>
-          <select
-            placeholder="Solid Color Themes"
-            id="dropdown"
-            class="td"
-            onchange="themeChange(this)"
-          >
-            <option disabled selected>Solid Color Themes</option>
-            <option value="d">Default</option>
-            <option value="Inverted">Inverted</option>
-            <option value="sky">Sky</option>
-            <option disabled selected>Catppuccin Themes</option>
-            <option value="catppuccinMocha">Mocha</option>
-            <option value="catppuccinMacchiato">Macchiato</option>
-            <option value="catppuccinFrappe">Frappe</option>
-            <option value="catppuccinLatte">Latte</option>
-            <option disabled selected>Custom Themes</option>
-          </select>
-        </div>
-        <div class="settings-card">
           <h3>Information</h3>
           <p>Version: v5.2.4</p>
           <p id="last-updated">Last Updated: June 19th, 2024</p>
-          <p>
-            Questions? Join our
-            <a href="https://discord.gg/interstellar">Discord community</a>,
-            email us at
-            <a href="mailto:hello@gointerstellar.app"
-              >hello@gointerstellar.app</a
-            >, or
-            <a href="https://docs.gointerstellar.app/faq">check our FAQ</a>!
-          </p>
-          <p>
-            By using Interstellar services, you confirm you have read and agreed
-            to the terms listed in our
-            <a href="/tos">Terms of Service and Privacy Policy</a>.
-          </p>
+          <p>Interstellar proxy, modified by Jayden</p>
         </div>
       </div>
     </div>
