--- a/static/index.html
+++ b/static/index.html
@@ -16,14 +16,14 @@
     <div id="particles-js">
       <script rel="preload" src="https://cdn.jsdelivr.net/particles.js/2.0.0/"></script>
       <div class="main">
-        <h1 class="title"><an>Inter</an>stellar</h1>
+        <h1 class="title"><an>Super</an>stellar</h1>
         <p id="splash">Unknown</p>
         <div class="search-container">
           <form id="fs" method="POST">
             <input
               id="is"
               class="main-search"
-              placeholder="Search with Google or enter address"
+              placeholder="Enter URL or Google something"
               type="text" />
           </form>
         </div>
@@ -48,9 +48,6 @@
     </script>
     <!-- DO NOT REMOVE-->
       <div>
-    <script
-      type="text/javascript"
-      src="//alleygoat.com/5e/6b/27/5e6b2776400180cc548a7dfd8ab3f717.js"></script>
   </div>
   </body>
 </html>
